--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ lebih dari 200 TV Channel terlengkap.
         <div class="card__tengah" style="background-color: rgb(255, 155, 0);">
         <div class="card__ideal">
             <img src="img/icon-new-device.svg" alt="device">
-            <p>Ideal untuk 1-4 perangkat</p>
+            <p>Bisa untuk 1-4 perangkat</p>
         </div>
         </div>
         <div class="card__ba">
@@ -242,7 +242,7 @@ lebih dari 200 TV Channel terlengkap.
         <div class="card__tengah" style="background-color: rgb(27, 167, 237);">
         <div class="card__ideal">
             <img src="img/icon-new-device.svg" alt="device">
-            <p>Ideal untuk 1-5 perangkat</p>
+            <p>Bisa untuk 1-5 perangkat</p>
         </div>
         </div>
         <div class="card__ba">
