semoga bia di hape

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             href="img/favicon-32x32.png"
             type="image/x-icon"
         />
-        <meta name="og:image" content="" />
+        <meta name="og:image" content="https://belifirstmedia.com/img/first-media.jpg" />
         <title>
             Promo Terbaru First Media Internet untuk Hemat Berlangganan Paket
             Internet! - First Media
